# pacman

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  index.scss
src/: app.rs  controls.rs  game_logic.rs  main.rs
src/components/: cell.rs  game_board.rs  mod.rs  scoreboard.rs
src/constants/: maze.rs
src/models/: direction.rs  ghost.rs  mod.rs  position.rs
src/styles/: game.css
src/tests/: component_tests.rs  game_logic_tests.rs  mod.rs
