[package]
name = "pacman-yew"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
gloo = { version = "0.10", features = ["timers", "events"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlElement", "KeyboardEvent", "Document"] }
