[package]
name = "pacman-yew"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
web-sys = { version = "0.3", features = ["KeyboardEvent", "Document"] }
gloo = { version = "0.10", features = ["events", "timers"] }
wasm-bindgen = "0.2"
gloo-timers = "0.3.0"
